--- a/src/components/weatherMainInfo.module.css
+++ b/src/components/weatherMainInfo.module.css
@@ -1,5 +1,5 @@
 .mainInfo {
-	background-color: white;
+	background-color: whitesmoke;
 	padding: 40px;
 	border-radius: 5px;
 	box-sizing: border-box;
@@ -7,6 +7,12 @@
 
 .city {
 	font-size: 32px;
+	text-align: center;
+	font-weight: bolder;
+}
+
+.region {
+	font-size: 15px;
 	text-align: center;
 	font-weight: bolder;
 }
